# virgil-kernel-module

./: .gitignore  README.md  annotated.html  classes.html  dir_0478bae25ca005df124f4d801fb1b428.html  dir_1b7b7e6f18e14fb57274198e362230c9.html  dir_1c7f18a65521cb9fe97c565a7f2775ca.html  dir_214d1a3d65a0466f35c9a98c802753d6.html  dir_33b3201675656339fc3f9922a4b5fe82.html  dir_c7887bc055d5c11085e7659a7b579ef5.html  dir_e23860bf31e34fc23f2897868b834b24.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html
d0/d4e/: structpackage__field__t.html
d0/d71/: ieee1609dot2-helper_8h.html  ieee1609dot2-helper_8h_source.html
d0/d90/: data-waiter_8h.html  data-waiter_8h_source.html
d1/df6/: key-value_8h.html  key-value_8h_source.html
d2/d55/: structfields__t.html
d2/dbd/: data_8h.html  data_8h_source.html
d3/dd8/: certificates_8h.html  certificates_8h_source.html
d5/d4d/: mainpage_8dox.html
d6/d2b/: structkv__pair__t.html
d7/d6b/: usermode-communicator_8h.html  usermode-communicator_8h_source.html
d7/d7f/: log_8h.html  log_8h_source.html
d9/d1c/: structkv__container__t.html
d9/d49/: types_8h.html  types_8h_source.html
d9/d51/: structdata__wait__element__t.html
d9/da6/: usermodehelper_8h.html  usermodehelper_8h_source.html
da/da0/: crypto_8h.html  crypto_8h_source.html
da/df2/: unionptr__with__pad__t.html
dd/d2b/: key-storage_8h.html  key-storage_8h_source.html
dd/d81/: fields_8h.html  fields_8h_source.html
dd/de8/: structdata__t.html
de/d4c/: netlink_8h.html  netlink_8h_source.html
docs/: Doxyfile  mainpage.dox
integration/openwrt-uclib/virgil-security-kernel/: Makefile
integration/openwrt/cmake/: Makefile
integration/openwrt/virgil-security/: Makefile
integration/openwrt/virgil-security-kernel/: Makefile
integration/test-credentials/: _vpasswd  _vprivkey  _vtoken
kernel-module/: Makefile
kernel-module-tests/: Makefile
kernel-module-tests/include/: macro.h
kernel-module-tests/src/: certificates.c  crypto.c  ieee1609dot2.c  main.c  storage.c
kernel-module/include/virgil/kernel/: certificates.h  (+3 more)
kernel-module/src/: data-waiter.c  netlink.c  usermode-communicator.c  usermodehelper.c  virgil.c
kernel-module/src/commands/: certificates.c  key-storage.c
kernel-module/src/foundation/: data.c  fields.c  key-value.c
scripts/: prepare.sh  test.sh
scripts/docs/: gen-docs.sh  publish-docs.sh
scripts/helpers/: get-private-key.sh
scripts/openwrt/: openwrt-copy-test-credentials.sh  openwrt-prepare.sh
scripts/static-analise/: static-analise-kernel.sh  static-analise-user.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_7.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+15 more)
user-space-service/: CMakeLists.txt  Makefile
user-space-service/cmake/: virgil.cmake
user-space-service/include/: VirgilApplication.h  VirgilCRLProcessor.h  VirgilCertificates.h  VirgilCommand.h  VirgilNetlinkCommunicator.h  VirgilParams.h  VirgilStorage.h  VirgilThreadedCommunicator.h  ini.hpp
user-space-service/include/commands/: VirgilCmdCertificates.h  VirgilCmdCrypto.h  VirgilCmdStorage.h
user-space-service/include/helpers/: VirgilFilesHelper.h  VirgilLog.h
user-space-service/src/: VirgilApplication.cxx  VirgilCRLProcessor.cxx  VirgilCertificates.cxx  VirgilCommand.cxx  VirgilNetlinkCommunicator.cxx  VirgilParams.cxx  VirgilStorage.cxx  VirgilThreadedCommunicator.cxx  main.cxx
user-space-service/src/commands/: VirgilCmdCertificates.cxx  VirgilCmdCrypto.cxx  VirgilCmdDataStorage.cxx
user-space-service/src/helpers/: VirgilFilesHelper.cxx
(+16 files in other folders)
